# langgraph-multiagent-research

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_INTEGRATION_STRATEGY.md  PROJECT_INTEGRATION_SPEC.md  RAG_ARCHITECTURE_DESIGN.md  README.md  RESEARCH_ASSISTANT_INTEGRATION_PLAN.md  Research Assistant Plan.md  STUDIO_SETUP.md  WARP.md  interactive_research_assistant.py  langgraph.json  pyproject.toml  rag-feature-progress-log.md
docs/: LLM_TRACE_LOGGING.md
examples/: basic_usage.py  test_llm_trace_logging.py
src/app/: __init__.py
src/app/application/workflows/: research_workflow.py
src/app/domain/: __init__.py
src/app/domain/entities/: research.py
src/app/domain/interfaces/: __init__.py  events.py  repositories.py  research_repositories.py  services.py
src/app/domain/models/: __init__.py  entities.py  events.py  value_objects.py
src/app/domain/services/: __init__.py  analyst_service.py  conversation_service.py  interview_service.py  message_service.py  research_service.py  task_service.py  user_service.py  workflow_service.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/repositories/: memory_research_repositories.py  research_unit_of_work.py
src/app/infrastructure/services/: __init__.py  mock_research_service.py  openai_service.py  research_llm_service.py  tavily_service.py  wikipedia_service.py
src/app/orchestration/: __init__.py
src/app/orchestration/langgraph/: __init__.py  nodes.py  orchestrator.py  research_entry.py  research_nodes.py  research_orchestrator.py  research_state.py  state.py
src/app/orchestration/workflows/: __init__.py  base.py  conversation_workflow.py
src/app/utils/: llm_trace_logger.py
